--- a/Styles/Buttons.xaml
+++ b/Styles/Buttons.xaml
@@ -2,8 +2,8 @@
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
                     xmlns:local="clr-namespace:VpdbAgent">
 
-
-    <Style x:Key="SecondaryButton" TargetType="Button">
+    <!-- rounded, solid -->
+    <Style x:Key="ButtonSolid" TargetType="Button">
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
                 <Setter Property="Background" Value="#20ffffff" />
@@ -21,20 +21,33 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border Background="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" CornerRadius="9" Padding="15,0,15,0" Height="18">
-                        <ContentPresenter/>
+                    <Border Background="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" CornerRadius="14" Padding="15,2,15,2" Height="28">
+                        <ContentPresenter TextBlock.FontSize="16"/>
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
         </Setter>
     </Style>
 
-    <Style x:Key="TertiaryButton" TargetType="Button" BasedOn="{StaticResource SecondaryButton}">
+    <!-- rounded, line -->
+    <Style x:Key="ButtonLine" TargetType="Button" BasedOn="{StaticResource ButtonSolid}">
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="Button">
-                    <Border BorderThickness="1" BorderBrush="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" CornerRadius="11" Padding="15,2,15,2" Height="22">
-                        <ContentPresenter TextBlock.Foreground="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}"/>
+                    <Border BorderThickness="1" BorderBrush="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" CornerRadius="14" Padding="15,2,15,2" Height="28">
+                        <ContentPresenter TextBlock.FontSize="16" TextBlock.Foreground="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" />
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
+
+    <Style x:Key="ButtonLineSmall" TargetType="Button" BasedOn="{StaticResource ButtonSolid}">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border BorderThickness="1" BorderBrush="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" CornerRadius="11" Padding="12,1,12,1" Height="22">
+                        <ContentPresenter TextBlock.FontSize="14" TextBlock.Foreground="{Binding Background, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=Button}}" />
                     </Border>
                 </ControlTemplate>
             </Setter.Value>
@@ -66,7 +79,6 @@
             </Setter.Value>
         </Setter>
     </Style>
-
 
     <Style x:Key="IconButton" TargetType="Button">
         <Style.Triggers>
