--- a/views/MainGameView.xaml
+++ b/views/MainGameView.xaml
@@ -69,8 +69,8 @@
                 </Label>
 
                 <!-- identify button -->
-                <Button IsEnabled="{Binding Game.Exists}" Command="{Binding IdentifyRelease}" Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToCollapsed}}" Style="{StaticResource TertiaryButton}" Grid.Column="1" Content="IDENTIFY" HorizontalAlignment="Right" Margin="0,0,10,0"/>
-                <Viewbox Grid.Column="1" StretchDirection="Both" Stretch="Uniform" Height="20" Width="20" HorizontalAlignment="Right" Margin="0,0,10,0">
+                <Button IsEnabled="{Binding Game.Exists}" Command="{Binding IdentifyRelease}" Visibility="{Binding Path=Game.HasRelease, Converter={StaticResource TrueToCollapsed}}" Style="{StaticResource ButtonLine}" Grid.Column="1" Content="IDENTIFY" HorizontalAlignment="Right" Margin="0,-5,10,-5"/>
+                <Viewbox Grid.Column="1" StretchDirection="Both" Stretch="Uniform" Height="24" Width="24" HorizontalAlignment="Right" Margin="0,0,10,0">
                     <loadin:LoadingIndicator Foreground="{StaticResource PrimaryColorBrush}" SpeedRatio="1" IsActive="{Binding IsExecuting}"  Style="{DynamicResource LoadingIndicatorArcsStyle}"/>
                 </Viewbox>
             </Grid>
@@ -101,7 +101,7 @@
                             </Grid.ColumnDefinitions>
 
                             <Label Grid.Column="0" Content="No match found."/>
-                            <Button Command="{Binding CloseResults}" Grid.Column="1" Style="{StaticResource TertiaryButton}" Content="CLOSE" HorizontalAlignment="Right"/>
+                            <Button Command="{Binding CloseResults}" Grid.Column="1" Style="{StaticResource ButtonLineSmall}" Content="CLOSE" HorizontalAlignment="Right"/>
                         </Grid>
 
                         <!-- result list -->
