--- a/Styles/Colors.xaml
+++ b/Styles/Colors.xaml
@@ -7,10 +7,14 @@
 
     <Color x:Key="LabelTextColor">#40ffffff</Color>
     <Color x:Key="PrimaryColor">#ffec843d</Color>
+    <Color x:Key="PrimaryColor75">#c0ec843d</Color>
+    <Color x:Key="PrimaryColor85">#daec843d</Color>
     <Color x:Key="WhiteColor">#ff282828</Color>
     <Color x:Key="WhiterColor">#ff181818</Color>
 
     <SolidColorBrush x:Key="PrimaryColorBrush" Color="{StaticResource PrimaryColor}" options:Freeze="True" />
+    <SolidColorBrush x:Key="PrimaryColor85Brush" Color="{StaticResource PrimaryColor85}" options:Freeze="True" />
+    <SolidColorBrush x:Key="PrimaryColor75Brush" Color="{StaticResource PrimaryColor75}" options:Freeze="True" />
     <SolidColorBrush x:Key="LabelTextBrush" Color="{StaticResource LabelTextColor}" options:Freeze="True" />
     <SolidColorBrush x:Key="WhiteBrush" Color="{StaticResource WhiteColor}" options:Freeze="True" />
     <SolidColorBrush x:Key="WhiterBrush" Color="{StaticResource WhiterColor}" options:Freeze="True" />
