--- a/views/MainGameView.xaml
+++ b/views/MainGameView.xaml
@@ -101,7 +101,7 @@
                             </Grid.ColumnDefinitions>
 
                             <Label Grid.Column="0" Content="No match found."/>
-                            <Button Command="{Binding CloseResults}" Grid.Column="1" Style="{StaticResource ButtonLineSmall}" Content="CLOSE" HorizontalAlignment="Right"/>
+                            <Button Command="{Binding CloseResults}" Grid.Column="1" Style="{StaticResource ButtonSolidSmall}" Content="CLOSE" HorizontalAlignment="Right"/>
                         </Grid>
 
                         <!-- result list -->
