--- a/Styles/Theme.xaml
+++ b/Styles/Theme.xaml
@@ -1,6 +1,7 @@
 ﻿<ResourceDictionary xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
                     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-                    xmlns:local="clr-namespace:VpdbAgent">
+                    xmlns:local="clr-namespace:VpdbAgent"
+                    xmlns:controls="http://metro.mahapps.com/winfx/xaml/controls">
 
     <!--FontFamily x:Key="Black">/Resources/Fonts/#Montserrat Black</-->
 	
@@ -9,6 +10,33 @@
         <Setter Property="Foreground" Value="{DynamicResource LabelTextBrush}" />
     </Style>
 
+    <!-- TEXT BOX (INPUT) -->
+    <Style TargetType="{x:Type TextBox}" BasedOn="{StaticResource MetroTextBox}">
+        <Style.Triggers>
+            <Trigger Property="IsEnabled" Value="False">
+                <Setter Property="Background" Value="#08ffffff" />
+            </Trigger>
+            <Trigger Property="IsEnabled" Value="True">
+                <Setter Property="Background" Value="#12ffffff" />
+            </Trigger>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#18ffffff" />
+            </Trigger>
+            <Trigger Property="IsFocused" Value="True">
+                <Setter Property="Background" Value="#28ffffff" />
+            </Trigger>
+
+        </Style.Triggers>
+        <Setter Property="Foreground" Value="{StaticResource InputTextColorBrush}" />
+        <Setter Property="MinHeight" Value="42" />
+        <Setter Property="FontSize" Value="18" />
+        <Setter Property="Padding" Value="10,5,10,5" />
+        <Setter Property="BorderBrush" Value="Transparent" />
+        <Setter Property="controls:ControlsHelper.FocusBorderBrush" Value="Transparent" />
+        <Setter Property="controls:ControlsHelper.MouseOverBorderBrush" Value="Transparent" />
+    </Style>
+
+    <!-- CHECKBOX -->
     <Style TargetType="{x:Type CheckBox}">
         <Style.Triggers>
             <Trigger Property="IsEnabled" Value="False">
@@ -66,7 +94,7 @@
         </Setter>
     </Style>
 
-
+    <!-- TOGGLE BUTTON -->
     <Style TargetType="{x:Type ToggleButton}">
         <Setter Property="Foreground" Value="{StaticResource PrimaryColorBrush}" />
         <Setter Property="Background" Value="{StaticResource LabelTextBrush}" />
